--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "express-validator": "^5.3.1",
     "jade": "~1.11.0",
     "mongoose": "^5.0.1",
     "mongoose-validator": "^2.0.2",
