--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
     "express-validator": "^5.3.1",
+    "gulp": "^4.0.2",
     "jade": "~1.11.0",
     "mongoose": "^5.0.1",
     "mongoose-validator": "^2.0.2",
@@ -24,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "serve-favicon": "~2.4.5",
+    "sonarqube-scanner": "^2.5.0",
     "validator": "^9.2.0"
   }
 }
